# standalone-rag

./: .env.example  .gitignore  README.md  pyproject.toml  run_app.py  run_celery.sh
api/: main.py  schemas.py
db/: db.py  models.py  repository.py
src/: chunking.py  embedding.py  evaluation.py  rag_graph.py  reranker.py  retrieval.py  vector_store.py
src/celery/: __init__.py  app.py  tasks.py
src/vector/: __init__.py  chunking.py  embedding.py  rag_graph.py  retrieval.py  vector_store.py
tests/: test_db.py
ui/: app.py
utils/: chat_store.py  check_dependency.py  config.py  logger.py
